Mon Apr 28 23:25:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Add check that xapian is at at least version 1.0.6; raise
	  ImportError at import time if version is too old.  Add checks for
	  a version of xapian with sufficient features to support tags and
	  facets, and disable those features if they're not present: an
	  exception will be raised when tag or facet features are used if
	  the xapian version is too old.

Fri Apr 25 12:23:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Copy fixes from xapian_1.0 branch to make
	  the testsuite pass on windows.

Thu Apr 17 23:07:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/freetext_1.py: New unit test for the
	  search_by_default and allow_field_specific fields.

Thu Apr 17 22:04:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,xappy/fieldactions.py,
	  xappy/searchconnection.py: Add allow_field_specific and
	  search_by_default flags to INDEX_FREETEXT action.

Sat Mar 29 16:59:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix some "foo if bar" constructions
	  which broken python2.4.  Should now work with python 2.4 again.

Wed Mar 26 08:14:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Tidy up the imports in this file, too.

Wed Mar 26 07:52:47 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/datastructures.py,
	  xappy/indexerconnection.py: Remove several "import *" lines from
	  __init__.py, replacing them by importing the specific symbols
	  desired.  Remove the nasty renaming of imported symbols in the
	  files thus imported, since this was to work around polluting the
	  namespace when "import *" was used.

Tue Mar 25 12:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_query_type_1.py,xappy/indexerconnection.py,