@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10121.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10411.tgz',
      'xapian-core.tgz',
-     'c3a02320e95de7fd91cdf7c5347641987f39330d',
+     '8cb209a20492dcb825aad26bae9da52e42e50e3d',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10121.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10411.tgz',
      'xapian-bindings.tgz',
-     'e251fbdd8340a1f8fcdf32dce9cd4c1d0f9fd035',
+     '795c45683624e8e1691591c1b36a15215a41b1ad',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10121.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10411.tgz',
      'win32msvc.tgz',
-     'ecf183fe1b4f450fad1b21f84aacc6fd1bee3dff',
+     'f48b542ca5f3896923f8a0e1e677d15de417f5a2',
      'xapian-core/win32',
     ),
 )
